# bingbing-RL

./: .gitignore  README.md  findings.md  progress.md  pyproject.toml  task_plan.md
docs/: core_tables_schema.md  legality_diagnostics_schema.md  masked_team_league_system_v4_detailed.tex  module_output_contracts.md  run_metadata_schema.md  spec_conformance_matrix.md  spec_to_code_map.md
examples/: backend_smoke.py
scripts/: build_belief_ranker_dataset.py  build_real_calibration_samples.py  build_split_manifest.py  dispatch_active_real_queries.py  fit_real_feature_calibration.py  ingest_real_calibration.py  report_active_query_feedback.py  report_active_real_query_dispatch_validation.py  report_attack_oracle_failure_validation.py  report_belief_real_distribution_validation.py  report_data_engineering_validation.py  report_defense_anti_meta_effectiveness.py  report_exploiter_effectiveness.py  report_league_round.py  report_league_selfplay_health.py  report_learned_exploiter_validation.py  report_mask_explanation_validation.py  report_production_readiness.py  report_real_calibration_validation.py  report_underdog_residual_validation.py  report_v4_conformance_validation.py  run_ablation_suite.py  run_league_round.py  run_selfplay_orchestrator.py  run_training_schedule.py  run_training_scheduler_daemon.py  run_v4_ablation_experiments.py  select_model_checkpoint.py  train_attack_proposal.py  train_belief_ranker.py  train_defense_proposal.py  train_mask_selection.py  train_single_team_model.py
tests/: conftest.py  test_ablation_reports.py  test_active_query_dispatch.py  (+23 more)
(+133 files in other folders)
