[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "masked-team-league"
version = "0.1.0"
description = "Position-aware masked BO3/BO5 attack-defense league search system."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
mtl-run-round = "masked_team_league.cli.run_round:main"
mtl-run-selfplay = "masked_team_league.cli.run_selfplay:main"
mtl-train = "masked_team_league.cli.train:main"
mtl-report = "masked_team_league.cli.report:main"
mtl-calibrate = "masked_team_league.cli.calibrate:main"
mtl-ablate = "masked_team_league.cli.ablate:main"

[project.optional-dependencies]
dev = ["pytest>=8"]
torch = ["torch>=2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
